2006-02-27 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-text.c: Fix C89 compile error, from Jens Granseuer (bug 332714)
	
2006-02-26 Dom Lachowicz <cinamod@hotmail.com>	

	* rsvg-styles.c (rsvg_state_inherit_run): Fix inheritence of dash arrays (bug 332699)
	
2006-02-25 Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.14.0
	
2006-02-16 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix segv when encountering feMergeNode (bug 330928)
	
2006-02-15 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-text.c: revert fix #168223, it causes side-effects.

2006-02-15 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-text.c: made text push and pop discrete layers as appropriate - bug #331116

2006-02-10 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo.h: Add G_BEGIN/END_DECLS for C++ protection - bug 330722
	
2006-02-07 Rob Staudinger <robert.staudinger@gmail.com>

	* rsvg-text.c: fix #168223.

2006-02-06 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-base.c: Fix C89 conformance (bug 330151), from Jens Granseuer.
	* configure.in: bump version #
	
2006-02-05 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.h: Export RsvgHandle and RsvgHandleClass to the outside world so you can subclass them
	* *.c: Changes necessary for ^^^
	
2006-02-05 Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-render.c: Bug #323114; work-around for a nasty cairo bug
	wrt pixel dirt
	* rsvg.c: Ditto

2006-02-05 Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-base-file-util.c: Bug #330008 - prevent crashes and other bad behavior by checking 
	return values. Inspired by work done by Daniel Drake (dsd@gentoo.org)
	* rsvg-base.c, rsvg-convert.c, rsvg-defs.c, rsvg-file-util.c, rsvg.c, test-display.c: Ditto
	* test-display.c: Don't show zoom buttons in the Mozilla plugin
	* rsvg-cairo-draw.c: Bug #330022; code computes wrong pixel values with color = 0xFF and alpha - 0xff. From Emmanuel Pacaud.
	
2006-02-05 Caleb Moore <c.moore@student.unsw.edu.au>
